<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Facebook Dice Roller</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_imagemanage">Image Management</string>
    <string name="activity_import_import_button_text">Import Friends</string>
    <string name="activity_main_import_button_text">Facebook Import</string>
    <string name="activity_main_add_dice_text">Add Dice</string>
    <string name="activity_main_roll_all_dice_text">Roll all dice</string>
    <string name="activity_import_open_session_button_text">Open Session</string>
    <string name="activity_import_print_button_text">Print</string>
    <string name="activity_import_save_button_text">Save</string>
    <string name="activity_import_random_guest_button_text">Random Guest</string>
    <string name="activity_import_clear_button_text">Clear List</string>
    <string name="app_id">146547195499640</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="activity_main_random_button_text">Random Guest</string>
    <string name="title_activity_camera">Camera</string>
    <string name="dialog_imagemanage_add_button">Add to Group</string>
	<string name="dialog_imagemanage_create_button">New group</string>
</resources>