<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
     >

	<com.facebook.widget.LoginButton
	    android:id="@+id/activity_import_facebook_login"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	 />
		
	<Button
	    android:id="@+id/activity_import_import_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/activity_import_import_button_text"
	    android:onClick="onImportButtonClicked"
	     />
	
	<Button
	    android:id="@+id/activity_import_print_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/activity_import_print_button_text"
	    android:onClick="onPrintButtonClicked"
	     />

	<Button
	    android:id="@+id/activity_import_random_guest_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/activity_import_random_guest_button_text"
	    android:onClick="onRandomGuestButtonClicked"
	     />	
	
</LinearLayout>